...
              colorFilter:
                  _colorFilter(_preferences.theme) ??
                  const ColorFilter.mode(Colors.transparent, BlendMode.dst),
              child: _editingController == null
                  ? const Center(child: CircularProgressIndicator())
                  : RepaintBoundary(
                      key: const ValueKey('pdf-canvas-repaint-boundary'),
                      child: editor.PdfViewer(
                        key: ValueKey('reader-$_viewerGeneration'),
                        editing: _editingController,
                        controller: _viewerController,
                        documentId: widget.filePath,
                        minZoom: .01,
...
